--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
-p{
-    text-align: center;
+
+/* make the page make sense */
+html, body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
+
+* {
+box-sizing: border-box;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+}
+
