--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.bouton1{
-    background-color:#fb5043;
-}
 
 /* make the page make sense */
 html, body {
@@ -21,3 +18,23 @@ box-sizing: border-box;
     justify-content: flex-start; 
 }
 
+.boutons{
+    height: 10vh;
+    padding-left:25%;
+}
+
+.bouton1{
+    background-color:#fb5043;
+    border-radius: 5%;
+    width: 20%;
+    height: 100%;
+    font-size:1rem;
+}
+
+.bouton2{
+    background-color:#596eff;
+    border-radius: 5%;
+    width: 20%;
+    height: 100%;
+    font-size:1rem;
+}
