--- a/Interface-style.css
+++ b/Interface-style.css
@@ -17,8 +17,21 @@ body, html{
     margin: 0;
     background-color: white;
 }
-
-
+main{
+  height: 80vh;
+}
+.header{
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+}
+footer{
+  font-size: small;
+  text-align: right;
+  height: 10vh;
+}
 
 
 .container {
