--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@ html, body {
 }
 
 * {
-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+img{
+    width: 20%;
+}
+
+.centrer{
+    width: 20%;
 }
 
 @font-face {
@@ -35,15 +43,21 @@ body{
 }
 
 main {
-    height: 80vh;
+    height: 85vh;
 }
 
 footer{
     font-family: Moutarde;
     color:#D3D3D3;
-    height: 10vh;
-    text-align: right;
+    height: 5vh;
+
     background-color: #4b3621;
+
+}
+
+.text_footer{
+    padding-right: 2%;
+    text-align: right;
 }
 
 .boutons{
@@ -63,7 +77,7 @@ footer{
 }
 
 .texte{
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: Moutarde;
     color:#D3D3D3;
     padding-top:5% ;
@@ -86,7 +100,7 @@ footer{
     border-radius: 5%;
     width: 20%;
     height: 100%;
-    font-size:1rem;
+    font-size:1.3rem;
 }
 
 .bouton2{
@@ -98,12 +112,22 @@ footer{
     border-radius: 5%;
     width: 20%;
     height: 100%;
-    font-size:1rem;
+    font-size:1.3rem;
 }
 
-@media screen and (max-width:1280px) and (max-height: 550px){
+.bouton1:hover{
+    box-shadow: 5px 2px 2px black;
+    cursor: pointer;
+}
+
+.bouton2:hover{
+    box-shadow: 5px 2px 2px black;
+    cursor: pointer;
+}
+
+@media screen and (min-width:1280px) and (min-height: 550px){
     .texte{
-        font-size: 1rem;
+        font-size: 1.5rem;
         font-family: Moutarde;
         color:#D3D3D3;
         padding-top:5% ;
@@ -115,5 +139,8 @@ footer{
         padding-right:15%;
         box-shadow: 10px 5px 5px black;
     }
+
 }
+
+
 
