--- a/Interface-style.css
+++ b/Interface-style.css
@@ -144,8 +144,8 @@ input:invalid {
     min-width: 5%;
 }
 
-.set{
-  margin-left: 0.5rem;
+.set h2{
+  margin-left: 10%;
 }
 /*.container {*/
 /*    flex-direction: row;*/
