--- a/Interface-style.css
+++ b/Interface-style.css
@@ -38,7 +38,7 @@ img{
 }
 
 h2 {
-  margin-top:0;
+  margin-top: 0;
   font-size: 2rem;
 }
 
@@ -108,12 +108,16 @@ input:invalid {
 }
 
 
-.interface{
+.interface h2{
   padding-top: 1%;
   padding-bottom: 1%;
   margin: 0 10% 0 10%;
 }
 
+
+.interface div, .interface button{
+  margin: 0 10% 0 10%;
+}
 
 #playingfield{
   border-radius: 30px;
@@ -142,80 +146,6 @@ input:invalid {
     max-width: 20%;
     min-width: 5%;
 }
- 
-.pop {  
- 
-  color:black;
-  font-family: "Questrial", sans-serif;
-  
-  background-size: 100%;
-  background-position: 0 0;
-  animation: slide 4s infinite linear;
-} 
-@keyframes slide {
-  from {
-    background-position: 0 0;
-  }
-
-  to {
-    background-position: -120px 60px;
-  }
-}
-
-.modal {
-  
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: auto;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1.6rem 3rem;
-  border: 3px solid black;
-  border-radius: 5px;
-  background: white;
-  box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
-  
-}
-.message {
-  font-size:1.1rem;
-  margin-bottom: 1.6rem;
-  margin-top: 0;
-}
-.btn {
-  color:inherit;
-    font-family:inherit;
-  font-size: inherit;
-  background: white;
-  padding: 0.3rem 3.4rem;
-  border: 3px solid black;
-  margin-right: 2.6rem;
-  box-shadow: 0 0 0 black;
-  transition: all 0.2s;
-}
-
-.btn:last-child {
-  margin: 0;
-}
-
-.btn:hover {
-  box-shadow: 0.4rem 0.4rem 0 black;
-  transform: translate(-0.4rem, -0.4rem);
-}
-
-.btn:active {
-  box-shadow: 0 0 0 black;
-  transform: translate(0, 0);
-}
-
-.options {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 
 .set h2{
   margin-left: 10%;
