--- a/Interface-style.css
+++ b/Interface-style.css
@@ -201,24 +201,19 @@ input:invalid {
   transform: translate(-0.4rem, -0.4rem);
 }
 
-.item {
-  opacity: 1;
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -ms-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5 ease-in-out;
-  transition: opacity 0.5s ease-in-out;
+.btn:active {
+  box-shadow: 0 0 0 black;
+  transform: translate(0, 0);
 }
 
-.item.fade{
-  opacity:0;
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
+
 
 .set h2{
   margin-left: 10%;
 }
-/*.container {*/
-/*    flex-direction: row;*/
-/*    flex-wrap: wrap;*/
-/*}*/
 
